<resources>
    <string name="app_name">libraryModel</string>
    <string name="publisher">Editora</string>
    <string name="publicationYear">Ano de Publicação</string>
    <string name="author">Autor</string>
    <string name="title">Titulo</string>
    <string name="create">Create</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="done">done</string>
    <string name="appName">Compendium</string>
    <string name="search_book">Busque por Livros</string>
    <string name="add_book">Adicione um Novo Livro</string>
    <string name="consult_your_library">Consulte sua Biblioteca</string>
</resources>